--- a/android.css
+++ b/android.css
@@ -28,7 +28,6 @@ nav > a {
    color: white;
    gap: 20px;
    margin: 5px;
-   font-family: Arial, Helvetica, sans-serif;
    margin-right: 10px;
    margin-top: 15px;
    padding: 10px;
@@ -40,7 +39,7 @@ nav{
 }
 a:hover{
    background-color: var(--cor3);
-   color: var(--cor6);
+   color: var(--cor2);
    border-radius: 5px;
    transition: background-color 2s;
    width: 100%;
@@ -206,4 +205,24 @@ main .pequena{
    max-width: 80%;
    display: block;
    margin: auto;
+}
+.centralizacao{
+   display: flex;
+   justify-content: center;
+}
+.centralizacao > button{
+   padding: 20px;
+   margin-bottom: 10px;
+   background-color: var(--cor3);
+   border: none;
+   border-radius: 5px;
+   color: var(--cor6);
+   cursor: pointer;
+   transition: 0.7s;
+   font-family:'Oswald', Helvetica, sans-serif;
+}
+.centralizacao > button:hover{
+   background-color: var(--cor2);
+   border-radius: 10px;
+   transform: scale(1.1);
 }
